chore: update documentation
