# cmd/server/main.go
@@ -7,7 +7,13 @@ import (
 
 // @Golang API REST
 // @version 1.0
-// @description API REST in Golang with Gin Framework
+// @description This API facilitates service management within a Golang application, leveraging the Gin Framework and Gorm ORM.
+
+// @contact.name Nicolas Theodoro Lopes
+// @contact.email nicolastheodoro@gmail.com
+
+// @license.name MIT
+// @license.url https://github.com/nicktheodoro/service-management/blob/main/LICENSE
 
 // @BasePath /
 
